--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
+    "next-intl": "^4.7.0",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
