--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-leaflet": "^5.0.0",
+    "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-places-autocomplete": "^4.0.1",
     "zod": "^4.3.6"
