feat: Implementa la auto-población de recomendaciones para propiedades utilizando las APIs de Google Places y Overpass, añadiendo servicios, acciones y componentes UI.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-google-maps/api": "^2.20.8",
     "clsx": "^2.1.1",
