--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:seed": "npx tsx src/db/seed-demo.ts"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.2",
