--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.6",
     "pg": "^8.17.2",
+    "postgres": "^3.4.8",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
