feat: Upload de imágenes con Supabase Storage
- Agrega cliente Supabase admin (src/lib/supabase.ts)
- API route para upload de archivos (/api/upload)
- BasicInfoSection con UI de upload + spinner + errores
- Soporta tanto upload de archivos como URLs

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-google-maps/api": "^2.20.8",
+    "@supabase/supabase-js": "^2.93.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
