--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "db:seed": "npx tsx src/db/seed-demo.ts"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.1",
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.93.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -26,6 +29,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
+    "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.7.0",
     "next-qrcode": "^2.5.1",
     "next-themes": "^0.4.6",
