--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.93.1",
     "@types/bcryptjs": "^2.4.6",
@@ -26,8 +27,8 @@
     "framer-motion": "^12.29.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
-    "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
+    "maplibre-gl": "^5.17.0",
     "next": "16.1.4",
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.7.0",
@@ -39,7 +40,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
-    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.1.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -48,7 +49,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
