--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.93.1",
     "@types/bcryptjs": "^2.4.6",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
