--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@auth/drizzle-adapter": "^1.11.1",
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-google-maps/api": "^2.20.8",
