--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.93.1",
     "@types/bcryptjs": "^2.4.6",
