--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-places-autocomplete": "^4.0.1",
+    "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
